<resources>

    <string name="app_name">AndroidSimpleChat</string>
    <string name="action_settings">Settings</string>
    <string name="send_button">Send</string>
    <string name="msg_hint">Type New Message</string>
    <string name="medium_text">Medium Text</string>
    <string name="user_list_header">User List</string>
    <string name="perf_user_profile">User Profile</string>
    <string name="perf_nick_key">NICK</string>
    <string name="perf_nick_name">Set Nick Name</string>
    <string name="perf_nick_name_summary">Set AChat Nick Name</string>
    <string name="perf_history_profile">History Profile</string>
    <string name="perf_depth_key">DEPTH</string>
    <string name="perf_depth_history">Set History Depth</string>
    <string name="perf_depth_history_summary">Set AChat History Depth</string>
    <string name="title_activity_achat_settings">AChatSettings</string>

</resources>
