<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/perf_user_profile">
        <EditTextPreference android:key="@string/perf_nick_key"
            				android:title="@string/perf_nick_name"
            				android:summary="@string/perf_nick_name_summary"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/perf_history_profile">
        <ListPreference android:key="@string/perf_depth_key"
            			android:summary="@string/perf_depth_history_summary"
            			android:title="@string/perf_depth_history"
            			android:entries="@array/historyDepth"
            			android:entryValues="@array/historyDepthValues"/>
    </PreferenceCategory>
</PreferenceScreen>
